tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_inheritance_errors@points_to_right_tpl_error_in_parent.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
assertion_line: 205
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/inheritance/points_to_right_tpl_error_in_parent.txt
---
error: Invalid type for the value, expected `&str` but got `i64`
 --> top:1:44
  |
1 | {% block content %}{% endblock content %}{{ 1 | upper }}
  |                                             ^
